get baseline functionality working
Co-authored-by: Tiberius Lockett <Tiberiusloc@users.noreply.github.com>
Co-authored-by: S Majerus <s.majerus@bellevuecollege.edu>

--- a/university-registrar/Views/Courses/Create.cshtml
+++ b/university-registrar/Views/Courses/Create.cshtml
@@ -7,8 +7,8 @@
 <h4>Add a new Course</h4>
 @using (Html.BeginForm())
 {
-  @Html.LabelFor(model => model.CourseName)
-  @Html.TextBoxFor(model => model.CourseName)
+  @Html.LabelFor(model => model.Name)
+  @Html.TextBoxFor(model => model.Name)
 
   @Html.LabelFor(model => model.CourseNumber)
   @Html.TextBoxFor(model => model.CourseNumber)
