--- a/university-registrar/Views/Courses/Details.cshtml
+++ b/university-registrar/Views/Courses/Details.cshtml
@@ -2,7 +2,7 @@
   Layout = "_Layout";
 }
 
-@model UniversityRegistrar.Models.Category;
+@model UniversityRegistrar.Models.Course;
 
 <h2>Course Details</h2>
 <hr />
