--- a/university-registrar/Views/Courses/Edit.cshtml
+++ b/university-registrar/Views/Courses/Edit.cshtml
@@ -1,15 +1,15 @@
-@model UniversityRegistrar.Models.Student
+@model UniversityRegistrar.Models.Course
 
 <h2>Edit</h2>
 
-<h4>Edit this Student: @Html.DisplayFor(model => model.CourseName)</h4>
+<h4>Edit this Student: @Html.DisplayFor(model => model.Name)</h4>
 
 @using (Html.BeginForm())
 {
-  @Html.HiddenFor(model => model.StudentId)
+  @Html.HiddenFor(model => model.CourseId)
 
-  @Html.LabelFor(model => model.CourseName)
-  @Html.EditorFor(model => model.CourseName)
+  @Html.LabelFor(model => model.Name)
+  @Html.EditorFor(model => model.Name)
 
   @Html.LabelFor(model => model.CourseNumber)
   @Html.EditorFor(model => model.CourseNumber)
