--- a/university-registrar/Views/Students/Create.cshtml
+++ b/university-registrar/Views/Students/Create.cshtml
@@ -2,7 +2,7 @@
   Layout = "_Layout";
 }
 
-@model UniversityRegistrar.Models.Item
+@model UniversityRegistrar.Models.Student
 
 <h4>Add a new Student</h4>
 
