--- a/university-registrar/Views/Courses/Delete.cshtml
+++ b/university-registrar/Views/Courses/Delete.cshtml
@@ -2,7 +2,7 @@
   Layout = "_Layout";
 }
 
-@model UniversityRegistrar.Models.Category
+@model UniversityRegistrar.Models.Course
 
 <h2>Are you sure you want to delete this course?</h2>
 
