--- a/university-registrar/Views/Students/AddCourse.cshtml
+++ b/university-registrar/Views/Students/AddCourse.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Add a Student</h2>
 
-<h4>Add a Student to this course: @Html.DisplayFor(model => model.CourseName)</h4>
+<h4>Add a Student to this course: @Html.DisplayFor(model => model.Name)</h4>
 
 @using (Html.BeginForm())
 {
