--- a/university-registrar/Views/Students/Delete.cshtml
+++ b/university-registrar/Views/Students/Delete.cshtml
@@ -2,7 +2,7 @@
   Layout = "_Layout";
 }
 
-@model UniversityRegistrar.Models.Item
+@model UniversityRegistrar.Models.Student
 
 <h2>Are you sure you want to delete this Student?</h2>
 
