--- a/university-registrar/Views/Courses/Details.cshtml
+++ b/university-registrar/Views/Courses/Details.cshtml
@@ -26,3 +26,4 @@ else
 <p>@Html.ActionLink("Back to categories", "Index")</p>
 <p>@Html.ActionLink("Edit Course", "Edit", new { id = Model.CourseId })</p>
 <p>@Html.ActionLink("Delete Course", "Delete", new { id = Model.CourseId })</p>
+<p>@Html.ActionLink("Add a Department", "AddDepartment", new { id = Model.CourseId })</p>
