--- a/university-registrar/Views/Departments/Index.cshtml
+++ b/university-registrar/Views/Departments/Index.cshtml
@@ -18,5 +18,5 @@
   }
 </ul>
 
-<p>@Html.ActionLink("Add new course", "Create")</p>
+<p>@Html.ActionLink("Add new department", "Create")</p>
 <p>@Html.ActionLink("Home", "Index", "Home")</p>
